fix: force theme in certain mobile dark mode browser (3)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,6 +26,7 @@
 
 html {
   forced-color-adjust: none;
+  filter: none !important;
 }
 
 body {
